# KafKaf

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  install.py  pyproject.toml
.github/workflows/: build-desktop.yml
deploy/: Dockerfile  docker-compose.autopilot.yml  docker-compose.local.yml  docker-compose.tailscale.yml  docker-compose.yml  install.sh  update.sh
docs/: ARCHITECTURE.md  GUIDE.md  ROADMAP.md  SETUP.md  USAGE.md
kafkaf/clients/cli/: main.py
kafkaf/clients/desktop/: main.py
kafkaf/clients/web/static/: app.js  i18n.js  index.html  manifest.json  style.css  sw.js
kafkaf/core/: api.py  autonomy.py  config.py  council.py  db.py  rate_limit.py  server.py
kafkaf/core/audit/: store.py
kafkaf/core/brains/: anthropic_brain.py  base.py  gemini_brain.py  ollama_brain.py  openai_brain.py  own_model_brain.py  registry.py
kafkaf/core/enrichment/: autopilot.py  service.py  store.py  topics.py
kafkaf/core/memory/: store.py
kafkaf/core/personas/: coach.py  default.py  models.py  researcher.py  style.py
kafkaf/core/skills/: base.py  browser_automate.py  browser_render.py  calculator.py  datetime_skill.py  document_search.py  files.py  hash_text.py  identity.py  journal.py  loop.py  memory_search.py  net_utils.py  own_model_status.py  password_generator.py  random_pick.py  registry.py  reminders.py  rss.py  run_code.py  sandbox.py  schedule.py  store.py  system_info.py  text_diff.py  text_stats.py  unit_convert.py  weather.py  web_fetch.py  web_search.py
kafkaf/mcp/: server.py
kafkaf/model/: config.py  dataset.py  gpt.py  tokenizer.py  train.py
scripts/: build_desktop.py
tests/: test_api.py  test_audit_store.py  test_autonomy.py  test_autopilot.py  test_browser_automate.py  test_browser_render.py  test_cli.py  test_config.py  test_council.py  test_enrichment_store.py  test_memory_store.py  test_model_gpt.py  test_net_utils.py  test_ollama_brain.py  test_personas.py  test_rate_limit.py  test_registry.py  test_schedule.py  test_skill_approvals_store.py  test_skills.py  test_skills_loop.py
