[project]
name = "kafkaf"
version = "0.1.0"
description = "KafKaf (כףכף) — a free, private, self-hosted, growing AI agent platform."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
kafkaf = "kafkaf.clients.cli.main:app"
kafkaf-server = "kafkaf.core.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kafkaf"]
