[project]
name = "kafkaf"
version = "0.1.0"
description = "KafKaf (כףכף) — a free, private, self-hosted, growing AI agent platform."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
train = ["torch>=2.2"]
mcp = ["mcp>=1.2"]
desktop = ["pywebview>=5.0"]
# One command for "the desktop app, and our own trainable model" together —
# avoids a second, separate `pip install` later while kafkaf-desktop.exe is
# already running, which fails on Windows with a file-in-use error (the
# console-script wrapper can't be overwritten while its process is live).
desktop-full = ["kafkaf[desktop,train]"]

[project.scripts]
kafkaf = "kafkaf.clients.cli.main:app"
kafkaf-server = "kafkaf.core.server:run"
kafkaf-mcp = "kafkaf.mcp.server:main"
kafkaf-desktop = "kafkaf.clients.desktop.main:main"
kafkaf-autopilot = "kafkaf.core.enrichment.autopilot:app"
kafkaf-autopilot-ctl = "kafkaf.core.enrichment.autopilot:ctl_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kafkaf"]
